--- a/WSR_Tort/Pages/EquipmentListing.xaml
+++ b/WSR_Tort/Pages/EquipmentListing.xaml
@@ -10,7 +10,13 @@
 
     <Grid>
         <ListBox Background="#FFE1D77F" Name="EquipList">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                </Style>
+            </ListBox.ItemContainerStyle>
             <ListBox.ItemTemplate>
+               
                 <DataTemplate>
                     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                         <Grid.ColumnDefinitions>
@@ -37,7 +43,7 @@
                         </Grid>
 
                         <Grid Grid.Column="1" >
-                            <Button Grid.Column="1" Style="{StaticResource MainButton}" Click="EditEquipment" HorizontalAlignment="Center" Margin="50, 0, 0, 0" Height="35" Width="300" Content="Изменить" FontSize="18"/>
+                            <Button Grid.Column="1" Style="{StaticResource MainButton}" Click="EditEquipment" HorizontalAlignment="Center" Margin="0, 0, 0, 0" Height="35" Width="300" Content="Изменить" FontSize="18"/>
                         </Grid>
                     </Grid>
                 </DataTemplate>
